recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: type mismatch;
 found   : Int
 required: Boolean
if(levels+1) left(120);right(120);avance(length);
         ^